resources/style.css
body {margin: 0;
    font-family: Georgia;
    font-size: 17px;
    color: black;
  }

header {display: flex;
    align-items: center;
    position: fixed;
    z-indez: 1;
    width: 100%;
    height: 80px;
    border-bottom: 1px solid black;
    background-color: white;
    font-family: Verdana;
    font-size: 14px;
    font-weight: bold;
  }

.logo {display: flex;
    align-items: center;
    flex-grow: 1;
    padding-left: 30px;
  }

.logo img {width: 70px;
        height: 60px;
        margin-right: 12px;
  }

.logo span {color: mediumAquamarine;
}

nav span {display: inline-block;
  padding: 20px 10px;
}

a {color: black;
}

p {display: block;
}

.content {display: flex;
    width: 1232 px;
    margin: 0 auto 78px auto;
    padding-top: 116px;
  }

.column.large {width: 630px;
    margin-right: 32px;
    height: 1107px;
    }

.column.medium {width: 300px;
    display: flex;
    flex-direction: column;
    height: 1107px;
    margin-right: 32px;
    }

.column.small {width: 240px;
    display: flex;
    flex-direction: column;
    height: 1107px;
    }

.column {display: flex;
    flex-direction: column;
    margin-right: 32px;
  }

.lead-story .image-content span {margin-left: 20px;
}

.lead-story .image-content {
    background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
    width: 630px;
    margin-top: 0;
    font-size: 40px;
    text-align: left;
}

.image-content {display: flex;
    flex-direction: column;
    justify-content: center;
    height: 300px;
    margin-top: 15px;
    color: white;
    font-family: Georgia;
    font-weight: bold;
    font-size: 30px;
}

h2  {display: block;
    margin-top: 0;
    margin-bottom: 0;
    font-family: Georgia;
    font-size: 30px;
    font-weight: bold;
    font-style: normal;
    height: 100.8px;
    width: 300px;
  }

.stories {display: flex;
    justify-content: space-between;
    margin-top: 17px;
    width: 630px;
    height: 565px;
  }

.story {display: flex;
    flex-direction: column;
    width: 300px;
    height: 565px;
  }

.stories .text-content {display: block;
    height: 250px;
    width: 300px;
  }

.narrative {margin-top: 16px;
    margin-bottom: 17px;
  }

  .fall-cancelled.image-content {
      background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
  }

  .pop-culture.image-content {
      background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
  }

    .pop-culture.image-content span {
    }

.cat-ceo.image-content {
    display: block;
    flex-direction: row;
    background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
    border-bottom-style: solid;
    border-bottom-width: 1px;
    height: 300px;
    width: 256px;
}

.news-bites {height: 342.2px;
    width: 240px;
    display: block;
  }

.news-bites .bite {display: block;
    padding: 11px 20px;
    border-bottom: 1px solid black;
    background-color: whitesmoke;
    font-family: Verdana;
    font-size: 12px;
    color: dimgray;
  }

  img.cookie {height:240px;
  }

.news-bites h3 {margin-bottom: 41px;
    font-size: 16px;
    font-weight: bold;
    text-align: center;
  }

  .news-bites .bite {display: block;
    padding: 11px 20px;
    border-bottom: 1px solid black;
    background-color: whitesmoke;
    color: dimgray;
  }

footer {display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    height: 325 px;
    background-color: mediumAquamarine;
    margin: auto;
    font-family: Verdana;
    font-size: 12px;
  }

